--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-player": "^3.3.1",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
